Fixed overtime issue.
-fixed overtime text not showing in small device.
-updated if prize in overtime status, show remaining timer instead of prize pool amount.

--- a/src/Components/Home/Featured/styles.module.scss
+++ b/src/Components/Home/Featured/styles.module.scss
@@ -235,6 +235,11 @@
                 }
             }
             .pool-tickets {
+                .overtime-text {
+                    color: #ff3399;
+                    font-size: $fnt-sz-20;
+                }
+
                 .current-tickets {
                     color: #00c1b9;
                 }
